--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -42,7 +42,7 @@ jobs:
           context: ./
           # Note: tags has to be all lower-case
           tags: |
-            rpagliuca/go-simple-app:latest
+            usuario1minicursounifunec/go-simple-app:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
 
